--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
+    "movie-trailer": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-youtube": "^10.1.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
