--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "movie-trailer": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^3.2.5",
     "react-router-dom": "^6.8.2",
     "react-youtube": "^10.1.0",
     "tailwind-scrollbar-hide": "^1.1.7"
